WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268987
[Cocoa] WebCodecs H264 decoder is not always reordering frames according presentation time
https://bugs.webkit.org/show_bug.cgi?id=268987
Summary
[Cocoa] WebCodecs H264 decoder is not always reordering frames according pres...
youenn fablet
Reported
2024-02-08 07:37:16 PST
Follow up to
https://bugs.webkit.org/show_bug.cgi?id=263901
, it seems that not all video streams get reordered properly.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-08 07:38:07 PST
<
rdar://problem/122544744
>
youenn fablet
Comment 2
2024-02-08 07:38:22 PST
Full repro steps from Marcello: - pull the code: - either from
https://github.com/marcello3d/webcodecs/tree/marcello/frame-out-of-order-logging
- apply the patch yourself to
https://github.com/w3c/webcodecs
https://patch-diff.githubusercontent.com/raw/w3c/webcodecs/pull/734.patch
- run the server with `node server` in the samples folder - open
http://localhost:8888/
in safari - open developer console to see javascript logs - leave settings at 2D & h264 - click start
youenn fablet
Comment 3
2024-02-08 08:17:12 PST
Our parsing of SPS is not liking samples/data/bbb_video_avc_frag.mp4
Marcello Bastea-Forte
Comment 4
2024-02-08 08:27:12 PST
I can find more test files, if that’s helpful. This is basically the last technical blocker to getting descript.com working on Safari/ipad/iphone.
youenn fablet
Comment 5
2024-02-08 08:37:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24076
EWS
Comment 6
2024-02-09 01:25:22 PST
Committed
274353@main
(875db7cbec49): <
https://commits.webkit.org/274353@main
> Reviewed commits have been landed. Closing PR #24076 and removing active labels.
Marcello Bastea-Forte
Comment 7
2024-03-06 22:19:00 PST
okay I just tested this on Safari Technology Preview 190 (Safari 17.4, WebKit 19619.1.5.5.2) it's fixed on the h264 example, hurray! But the h265 example still fails :( Error: Decoded frame 166666 µs out of order, last frame was 200000 µs
Marcello Bastea-Forte
Comment 8
2024-03-07 11:23:24 PST
filed the new bug as
https://bugs.webkit.org/show_bug.cgi?id=270645
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug