[Cocoa] WebCodecs H264 decoder is not always reordering frames according presentation time https://bugs.webkit.org/show_bug.cgi?id=268987 rdar://122544744

Reviewed by Eric Carlson.

We needed to loop until lower or equal than cpb_cnt_minus1 as per spec.
Manually tested using https://w3c.github.io/webcodecs/samples/video-decode-display.

* Source/ThirdParty/libwebrtc/Source/webrtc/sdk/objc/components/video_codec/nalu_rewriter.cc:

Canonical link: https://commits.webkit.org/274353@main